--- a/start.html
+++ b/start.html
@@ -11,7 +11,7 @@
     <h3>ami tomay balobashi</h3>
     <div>
         <h3>new blog</h3>
-        <h5>look mama.i can write a blog</h5>
+        <h5>look mama.i can write a blog.its not you mama,its you amma</h5>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sunt iure fugiat similique quaerat. Ut vero asperiores sint. Maiores, molestiae dolor. Modi autem earum voluptate dignissimos voluptatem accusantium eum, minima in assumenda id expedita nisi veritatis eaque consectetur odio accusamus.</p>
     </div>
     <img src="images.jpg" alt="">
